# iqe-sample-plugin

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  entry_points.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build_pkgs.yml
iqe_sample/: __init__.py  deprecations.py  pytest_plugin.py
iqe_sample/tests/: .metadata_tests  test_plugin.py
